--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "@prisma/client": "^4.0.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
     "ts-node": "^10.9.1",
